need for market for the moment

--- a/conf/supervisor/xivo.conf
+++ b/conf/supervisor/xivo.conf
@@ -9,6 +9,7 @@ command=/usr/local/bin/uwsgi --socket /tmp/xivo-uwsgi.sock
                        --module run
                        --callable app
                        --chmod=666
+                       --py-autoreload 1
 directory=/home/sylvain/dev/xivo-webi/
 autostart=true
 autorestart=true
