--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-flask
-flask-login
-flask-wtf
-flask-sqlalchemy
-restclient
-wtforms-json
-flask-principal
-Flask-Babel
-Flask-Script
-Yapsy
+flask==0.10.1
+flask-login==0.2.7
+flask-wtf==0.9.3
+wtforms==1.0.5
+flask-sqlalchemy==1.0
+restclient==0.11.0
+wtforms-json==0.2.3
+flask-principal==0.4.0
+Flask-Babel==0.9
+Babel==1.3
+Flask-Script==0.6.3
+Yapsy==1.10.2-pythons2n3
 Celery==3.0.24
-alembic
-Flask-Gravatar
+alembic==0.6.0
+Flask-Gravatar==0.4.1
+six==1.4.1
+SQLAlchemy==0.8.3
