updated supervisor config

--- a/conf/supervisor/xivo.conf
+++ b/conf/supervisor/xivo.conf
@@ -7,7 +7,7 @@ command=/usr/local/bin/uwsgi --socket /tmp/xivo-uwsgi.sock
                        --no-orphans
                        --max-requests 5000
                        --module run
-                       --callable app
+                       --callable application
                        --chmod=666
                        --py-autoreload 1
 directory=/usr/share/nginx/www/xivo-webi/
