--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 flask==0.10.1
 Werkzeug==0.9.4
 flask-login==0.2.7
-flask-wtf==0.9.3
 wtforms==1.0.5
 flask-sqlalchemy==1.0
 restclient==0.11.0
@@ -21,3 +20,4 @@ boto
 fabric
 python-novaclient
 flask-couchdb==0.2.1
+-e git+https://github.com/sboily/flask-wtf#egg=flask-wtf
