--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,4 @@ python-novaclient
 flask-couchdb==0.2.1
 python-ldap
 Flask-Mail==0.9.0
--e git+https://github.com/sboily/flask-wtf@areyouahuman
+git+https://github.com/sboily/flask-wtf.git@areyouahuman
